fix(title-and-content): alignment

--- a/src/themes/ummadum/assets/scss/partials/col-images.scss
+++ b/src/themes/ummadum/assets/scss/partials/col-images.scss
@@ -13,5 +13,9 @@
                 padding: 1rem 5rem;
             }
         }
+        
+        p {
+            font-size: 1.8rem !important;
+        }
     }
 }
